# shinkai-side-executor/openapi/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
   title: Shinkai Side Executor
   version: 0.1.0
@@ -87,6 +87,39 @@ paths:
             text/plain:
               schema:
                 type: string
+  /v1/vrkai/view-contents:
+    post:
+      summary: Returns a JSON representation of a VRKai
+      tags:
+        - VRKai
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                encoded_vrkai:
+                  type: string
+              required:
+                - encoded_vrkai
+      responses:
+        "200":
+          description: Successful response
+          content:
+            text/plain:
+              schema:
+                type: string
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Invalid request"
   /v1/vrpack/generate-from-files:
     post:
       summary: Generates a base64 encoded VRPack from files
